@@ -1483,6 +1483,9 @@ class CallasDonnerhackeFinneyShawThayerRFC4880
 		static void FingerprintCompute
 			(const tmcg_openpgp_octets_t					&in,
 			 tmcg_openpgp_octets_t							&out);
+		static void FingerprintComputeV5
+			(const tmcg_openpgp_octets_t					&in,
+			 tmcg_openpgp_octets_t							&out);
 		static void FingerprintConvertPlain
 			(const tmcg_openpgp_octets_t					&in,
 			 std::string									&out);
