@@ -8,6 +8,7 @@ in the sources of this package and additionally can be obtained from Internet
 <https://www.gnu.org/licenses>.
 
 * [2019-] added data structure TMCG_Bigint
+* [2019-04-19] RFC4880: added FingerprintComputeV5()
 * [2019-01-27] RFC4880: added missed GCRY error source by using gcry_error()
 * [2019-01-22] release 1.3.17 of LibTMCG
 * [2019-01-19] VTMF,ASTC,DKG,VRHE,EOTP,COM,VSS: make CheckGroup() more robust
